projets.html + projectEnglish.html

--- a/skillsEnglish.html
+++ b/skillsEnglish.html
@@ -19,27 +19,27 @@
 </head>
 <body>
 
-<header>
-    <div class="left-section">
-        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
-        <small>ADRIEN RAVEL</small>
-    </div>
-    <nav>
-        <ul>
-            <li><a href="pageAcceuil.html">ACCEUIL</a></li>
-            <li><a href="formation.html">FORMATIONS</a></li>
-            <li><a href="experiences.html">EXPERIENCES</a></li>
-            <li><a href="projets.html">PROJETS</a></li>
-            <li><a href="skills.html">COMPETENCES</a></li>
-            <li><a href="interets.html">CENTRE D'INTERET</a></li>
-        </ul>
-    </nav>
-    <a class="drapeau" href="skillsEnglish.html" ><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
+<header >
+  <div class="left-section">
+    <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+    <small>ADRIEN RAVEL</small>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="indexEnglish.html">HOME</a></li>
+      <li><a href="formationEnglish.html">EDUCATION</a></li>
+      <li><a href="experiencesEnglish.html">EXPERIENCES</a></li>
+      <li><a href="projectEnglish.html">PROJECTS</a></li>
+      <li><a href="skillsEnglish.html">SKILLS</a></li>
+      <li><a href="interetsEnglish.html">INTERESTS</a></li>
+    </ul>
+  </nav>
+  <a class="drapeau" href="skills.html" ><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
 </header>
 
 
 <main>
-    <h2>Langues</h2>
+    <h2>Languages</h2>
     <div class="flexxx">
         <div class="TittreJauge">
             <div class="pie">
@@ -48,7 +48,7 @@
                 </svg>
                 <div class="nb"></div>
             </div>
-            <p class="titreJauge">Français</p>
+            <p class="titreJauge">French</p>
         </div>
 
         <div class="TittreJauge">
@@ -58,7 +58,7 @@
                 </svg>
                 <div class="nb2">85%</div>
             </div>
-            <p class="titreJauge">Anglais</p>
+            <p class="titreJauge">English</p>
         </div>
 
         <div class="TittreJauge">
@@ -68,7 +68,7 @@
                 </svg>
                 <div class="nb2">50%</div>
             </div>
-            <p class="titreJauge">Espagnol</p>
+            <p class="titreJauge">Spanish</p>
         </div>
 
         <div class="TittreJauge">
@@ -78,7 +78,7 @@
                 </svg>
                 <div class="nb2">40%</div>
             </div>
-            <p class="titreJauge">Allemand</p>
+            <p class="titreJauge">German</p>
         </div>
 
         <div class="TittreJauge">
@@ -88,7 +88,7 @@
                 </svg>
                 <div class="nb2">20%</div>
             </div>
-            <p class="titreJauge">Coréen</p>
+            <p class="titreJauge">Korean</p>
         </div>
     </div>
     <script>
@@ -150,7 +150,7 @@
         }, 0);
     </script>
     <br><br>
-    <h2>Informatique</h2>
+    <h2>Computer Science</h2>
         <div class="flexxx">
         <div class="TittreJauge">
             <div class="pie">
@@ -244,7 +244,7 @@
                 </svg>
                 <div class="nb2">50%</div>
             </div>
-            <p class="titreJauge">Réseau</p>
+            <p class="titreJauge">Network <br>Programming</p>
         </div>
     </div>
     <script>
@@ -366,7 +366,7 @@
     </script>
 
         <br><br>
-    <h2>Electronique</h2>
+    <h2>Electronic</h2>
         <div class="flexxx">
         <div class="TittreJauge">
             <div class="pie">
@@ -375,7 +375,7 @@
                 </svg>
                 <div class="nb2">50%</div>
             </div>
-            <p class="titreJauge">VHDL sur FPGA</p>
+            <p class="titreJauge">VHDL on FPGA</p>
         </div>
 
         <div class="TittreJauge">
@@ -385,7 +385,7 @@
                 </svg>
                 <div class="nb2">65%</div>
             </div>
-            <p class="titreJauge">Microcontrolleur <br>(PIC18F4550)</p>
+            <p class="titreJauge">Microcontrollers <br>(PIC18F4550)</p>
         </div>
 
         <div class="TittreJauge">
@@ -433,7 +433,7 @@
                 </svg>
                 <div class="nb2">30%</div>
             </div>
-            <p class="titreJauge">Linux Embarqué</p>
+            <p class="titreJauge">Embedded  Linux</p>
         </div>
         <div class="TittreJauge">
             <div class="pie" >
@@ -442,7 +442,7 @@
                 </svg>
                 <div class="nb2">70%</div>
             </div>
-            <p class="titreJauge">C Embarqué</p>
+            <p class="titreJauge">Embedded C</p>
         </div>
         <div class="TittreJauge">
             <div class="pie" >
@@ -451,7 +451,7 @@
                 </svg>
                 <div class="nb2">45%</div>
             </div>
-            <p class="titreJauge">Signaux Analogique<br>et numérique</p>
+            <p class="titreJauge">Analog and Digital <br>signals</p>
         </div>
     </div>
     <script>
@@ -573,7 +573,7 @@
     </script>
 
             <br><br>
-    <h2>Conception et création numérique</h2>
+    <h2>Design and digital creation</h2>
         <div class="flexxx">
         <div class="TittreJauge">
             <div class="pie">
@@ -582,7 +582,7 @@
                 </svg>
                 <div class="nb2">50%</div>
             </div>
-            <p class="titreJauge">Conception 3D <br> Soldiwork </p>
+            <p class="titreJauge">3D Design<br> Soldiwork </p>
         </div>
 
         <div class="TittreJauge">
@@ -592,7 +592,7 @@
                 </svg>
                 <div class="nb2">30%</div>
             </div>
-            <p class="titreJauge">Conception 2D <br> Illustrator  </p>
+            <p class="titreJauge">2D Design<br> Illustrator  </p>
         </div>
 
         <div class="TittreJauge">
@@ -602,7 +602,7 @@
                 </svg>
                 <div class="nb2">60%</div>
             </div>
-            <p class="titreJauge">Montage Vidéo <br> Premiere Pro</p>
+            <p class="titreJauge">Video montage<br> Premiere Pro</p>
         </div>
 
         <div class="TittreJauge">
@@ -688,7 +688,7 @@
         }, 0);
     </script>
 <BR><BR>
-    <h2>Gestion, management et finance</h2>
+    <h2>Management</h2>
         <div class="flexxx">
         <div class="TittreJauge">
             <div class="pie">
@@ -697,7 +697,7 @@
                 </svg>
                 <div class="nb2">60%</div>
             </div>
-            <p class="titreJauge">Gestion de Projet</p>
+            <p class="titreJauge">Project Management</p>
         </div>
 
         <div class="TittreJauge">
@@ -707,7 +707,7 @@
                 </svg>
                 <div class="nb2">33%</div>
             </div>
-            <p class="titreJauge">Management <br>d'équipe</p>
+            <p class="titreJauge">Team <br>Management</p>
         </div>
         <div class="TittreJauge">
             <div class="pie" >
@@ -726,7 +726,7 @@
                 </svg>
                 <div class="nb2">33%</div>
             </div>
-            <p class="titreJauge">Management <br> Relationnel</p>
+            <p class="titreJauge">Relationship<br>Management</p>
         </div>
 
         <div class="TittreJauge">
@@ -736,7 +736,7 @@
                 </svg>
                 <div class="nb2">40%</div>
             </div>
-            <p class="titreJauge">Gestion <br>Budgétaire</p>
+            <p class="titreJauge">Budget <br>Management</p>
         </div>
 
         <div class="TittreJauge">
@@ -746,7 +746,7 @@
                 </svg>
                 <div class="nb2">30%</div>
             </div>
-            <p class="titreJauge">Analyse<br> financière</p>
+            <p class="titreJauge">Financial <br> Analysis</p>
         </div>
     </div>
     <script>
