projets.html + projectEnglish.html

--- a/projets.html
+++ b/projets.html
@@ -29,8 +29,7 @@
             <li><a href="formation.html">FORMATIONS</a></li>
             <li><a href="experiences.html">EXPERIENCES</a></li>
             <li><a href="projets.html">PROJETS</a></li>
-            <li><a href="skills.html">COMPETENCES</a></li>
-            <li><a href="interets.html">CENTRE D'INTERET</a></li>
+            <li><a href="skills.html">COMPETENCES</a></li
         </ul>
     </nav>
     <a class="drapeau" href="projectEnglish.html" ><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
