--- a/pageAcceuil.html
+++ b/pageAcceuil.html
@@ -19,18 +19,34 @@
 
 </head>
 <body>
-<header >
+<header class="a">
+    <nav class="navbar">
+        <div class="navbar-toggle" onclick="toggleMenu()">
+            <div class="icon-bar"></div>
+            <div class="icon-bar"></div>
+            <div class="icon-bar"></div>
+        </div>
+        <ul id="menu" class="navbar-links">
+            <li><a href="pageAcceuil.html">ACCEUIL</a></li>
+            <li><a href="formation.html">FORMATIONS</a></li>
+            <li><a href="experiences.html">EXPERIENCES</a></li>
+            <li><a href="projets.html">PROJETS</a></li>
+            <li><a href="skills.html">COMPETENCES</a></li>
+        </ul>
+    </nav>
+     <div class="left-section">
+        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <small>ADRIEN RAVEL</small>
+    </div>
+    <a class="drapeau" href="indexEnglish.html"><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
+</header>
+<header class="b">
     <div class="left-section">
         <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
         <small>ADRIEN RAVEL</small>
     </div>
     <nav class="navbar">
-        <div class="navbar-toggle">
-            <div class="icon-bar"></div>
-            <div class="icon-bar"></div>
-            <div class="icon-bar"></div>
-        </div>
-        <ul class="navbar-links">
+        <ul >
             <li><a href="pageAcceuil.html">ACCEUIL</a></li>
             <li><a href="formation.html">FORMATIONS</a></li>
             <li><a href="experiences.html">EXPERIENCES</a></li>
@@ -39,14 +55,6 @@
         </ul>
     </nav>
     <a class="drapeau" href="indexEnglish.html"><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
-    <ul class="navbar-dropdown">
-        <br><br><br><br><br><br>
-        <li><a href="pageAcceuil.html">ACCEUIL</a></li>
-        <li><a href="formation.html">FORMATIONS</a></li>
-        <li><a href="experiences.html">EXPERIENCES</a></li>
-        <li><a href="projets.html">PROJETS</a></li>
-        <li><a href="skills.html">COMPETENCES</a></li>
-    </ul>
 </header>
 
 <main>
