--- a/formation.html
+++ b/formation.html
@@ -18,14 +18,14 @@
     </script>
 </head>
 <body>
-
-<header>
-    <div class="left-section">
-        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
-        <small>ADRIEN RAVEL</small>
-    </div>
-    <nav>
-        <ul>
+<header class="a">
+    <nav class="navbar">
+        <div class="navbar-toggle" onclick="toggleMenu()">
+            <div class="icon-bar"></div>
+            <div class="icon-bar"></div>
+            <div class="icon-bar"></div>
+        </div>
+        <ul id="menu" class="navbar-links">
             <li><a href="pageAcceuil.html">ACCEUIL</a></li>
             <li><a href="formation.html">FORMATIONS</a></li>
             <li><a href="experiences.html">EXPERIENCES</a></li>
@@ -33,11 +33,31 @@
             <li><a href="skills.html">COMPETENCES</a></li>
         </ul>
     </nav>
-    <a class="drapeau" href="formationEnglish.html" ><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
+     <div class="left-section">
+        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <small>ADRIEN RAVEL</small>
+    </div>
+    <a class="drapeau" href="formationEnglish.html"><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
+</header>
+<header class="b">
+    <div class="left-section">
+        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <small>ADRIEN RAVEL</small>
+    </div>
+    <nav class="navbar">
+        <ul >
+            <li><a href="pageAcceuil.html">ACCEUIL</a></li>
+            <li><a href="formation.html">FORMATIONS</a></li>
+            <li><a href="experiences.html">EXPERIENCES</a></li>
+            <li><a href="projets.html">PROJETS</a></li>
+            <li><a href="skills.html">COMPETENCES</a></li>
+        </ul>
+    </nav>
+    <a class="drapeau" href="formationEnglish.html"><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
 </header>
 
 <main>
-    <section>
+    <section class="normal1">
         <div class="content">
             <h2 class= "title">Formation</h2>
             <p class="annee"><strong>2019 - 2024:</strong> Ecole ingénieur ECE - Majeure systèmes embarqués</p>
@@ -59,9 +79,8 @@
             <img src="images/1.png" alt="Formation" class="Image1">
             <img src="images/3.png" alt="Formation" class="Image1">
         </div>
- <br>
     </section>
-    <section>
+    <section class="normal1">
         <div class="images">
             <img src="images/4.png" alt="Formation" class="Image1">
             <img src="images/5.png" alt="Formation" class="Image1">
@@ -70,17 +89,55 @@
             <h2 class= "title">Licences et certifications</h2>
             <p class="intitule"><strong>2023:</strong> TOEIC - ETS Global</p>
             <p class="paragraphe"><em><strong>Score : 885/990 (Niveau B2).</strong> Le TOEIC - Listening and Reading Test est un test reconnu mondialement pour évaluer les compétences en compréhension orale et écrite en anglais.</em></p>
+            <p class="intitule"><strong>2021:</strong> Business Game Cesim</p>
+            <p class="paragraphe"><em>Le Business Game Cesim est une simulation d'entreprise interactive qui m'a de développer mes compétences en gestion et de me préparer à ma future carrière. Grâce à cette expérience pratique, j'ai pu mettre en pratique mes connaissances théoriques, travailler en équipe, développer des compétences en communication et en prise de décision, tout en apprenant de mes erreurs. Cette formation immersive m'a fourni une perspective réaliste sur les défis et les responsabilités auxquels je serai confronté en tant que futur manager ou ingénieur. </em></p>
+            <p class="intitule"><strong>2020:</strong> Certification Projet Voltaire</p>
+            <p class="paragraphe"><em>La certification Projet Voltaire a renforcé mes compétences en orthographe et en expression écrite pour une communication professionnelle efficace. Grâce à cette formation, j'ai amélioré ma maîtrise du français, consolidé mes compétences rédactionnelles et obtenu une reconnaissance officielle de mes aptitudes orthographiques. Cette certification est un atout majeur pour mon parcours académique et professionnel, me démarquant en tant qu'étudiant/professionnel avec des compétences linguistiques solides et une excellente maîtrise de l'écrit.</em></p>
+            <p class="intitule" ><strong>2018:</strong> <em>Certificat de compétences de secouriste PSE1</em></p>
+            <p class="paragraphe"><em>Le PSE1 m'a permis de développer des compétences en premiers secours, notamment la réanimation, la prise en charge des blessures et des malaises. Cette certification reconnaît mes compétences en tant que secouriste et me permet d'intervenir efficacement en cas d'urgence médicale, contribuant ainsi à la sécurité et au bien-être des autres.</em></p>
+        </div>
 
+    </section>
+
+        <section class="normal2">
+        <div class="content">
+            <h2 class= "title">Formation</h2>
+            <p class="annee"><strong>2019 - 2024:</strong> Ecole ingénieur ECE - Majeure systèmes embarqués</p>
+            <img src="images/2.png" alt="Formation" class="Image1">
+            <p class="paragraphe"><em>J'ai suivi la prépa intégrée de l'ECE, qui m'a permis d'acquérir des compétences sur les dernières nouveautés dans le domaine du numérique. Par la suite, je me suis spécialisé en M1 et M2 dans la majeure systèmes embarqués. Ma formation allie la théorie à la pratique, en mettant particulièrement l'accent sur les travaux pratiques et les nombreux projets.</em></p>
+            <p class="paragraphe"><em> <a href="pdf/livretPedagogiqueECE.pdf" target="_blank">Livret Pédagogique ECE</a></em></p>
+            <br>
+            <p class="intitule"><strong>2022:</strong> Kyungpook  National University</p>
+            <img src="images/1.png" alt="Formation" class="Image1">
+            <p class="paragraphe"><em>J'ai effectué un semestre à l'étranger à l'Université nationale de Kyungpook (경북대학교) en Corée du Sud. Pendant mon échange, j'ai suivi des cours d'électronique, notamment dans les domaines de l'intelligence artificielle, des systèmes d'exploitation, de la programmation réseau, du traitement du signal et des systèmes. J'ai également eu l'occasion d'apprendre la langue coréenne.</em></p>
+            <br>
+            <p class="intitule"><strong>2022:</strong> Formation Handimanagement par "Companieros"</p>
+            <p class="paragraphe"><em> Grâce à cette formation, j'ai également développé des compétences de manager, me permettant d'encadrer et de coordonner des équipes dans des projets liés à l'inclusion et à l'accessibilité. J'ai acquis une solide capacité à diriger, à communiquer efficacement et à prendre des décisions éclairées. Cette combinaison de compétences en gestion et en sensibilisation me permet d'apporter une approche holistique dans la promotion de l'égalité des chances et de créer un environnement inclusif pour tous.</em></p>
+            <br>
+            <p class="intitule"><strong>2019:</strong> Baccalauréat S (Mention Bien)</p>
+            <p class="paragraphe"><em>J'ai obtenu mon baccalauréat scientifique au lycée, où j'ai consolidé mes connaissances dans les domaines des sciences, des mathématiques et de la physique, tout en développant ma rigueur et ma capacité d'analyse.</em></p>
+            <br>
+            <img src="images/3.png" alt="Formation" class="Image1">
+            <br><br><br>
+        </div>
+    </section>
+
+    <section class="normal2">
+        <div class="content">
+            <h2 class= "title">Licences et certifications</h2>
+            <p class="intitule"><strong>2023:</strong> TOEIC - ETS Global</p>
+            <p class="paragraphe"><em><strong>Score : 885/990 (Niveau B2).</strong> Le TOEIC - Listening and Reading Test est un test reconnu mondialement pour évaluer les compétences en compréhension orale et écrite en anglais.</em></p>
             <br>
             <p class="intitule"><strong>2021:</strong> Business Game Cesim</p>
             <p class="paragraphe"><em>Le Business Game Cesim est une simulation d'entreprise interactive qui m'a de développer mes compétences en gestion et de me préparer à ma future carrière. Grâce à cette expérience pratique, j'ai pu mettre en pratique mes connaissances théoriques, travailler en équipe, développer des compétences en communication et en prise de décision, tout en apprenant de mes erreurs. Cette formation immersive m'a fourni une perspective réaliste sur les défis et les responsabilités auxquels je serai confronté en tant que futur manager ou ingénieur. </em></p>
+            <img src="images/4.png" alt="Formation" class="Image1">
             <br>
             <p class="intitule"><strong>2020:</strong> Certification Projet Voltaire</p>
             <p class="paragraphe"><em>La certification Projet Voltaire a renforcé mes compétences en orthographe et en expression écrite pour une communication professionnelle efficace. Grâce à cette formation, j'ai amélioré ma maîtrise du français, consolidé mes compétences rédactionnelles et obtenu une reconnaissance officielle de mes aptitudes orthographiques. Cette certification est un atout majeur pour mon parcours académique et professionnel, me démarquant en tant qu'étudiant/professionnel avec des compétences linguistiques solides et une excellente maîtrise de l'écrit.</em></p>
             <br>
             <p class="intitule" ><strong>2018:</strong> <em>Certificat de compétences de secouriste PSE1</em></p>
             <p class="paragraphe"><em>Le PSE1 m'a permis de développer des compétences en premiers secours, notamment la réanimation, la prise en charge des blessures et des malaises. Cette certification reconnaît mes compétences en tant que secouriste et me permet d'intervenir efficacement en cas d'urgence médicale, contribuant ainsi à la sécurité et au bien-être des autres.</em></p>
-
+            <img src="images/5.png" alt="Formation" class="Image1">
         </div>
     </section>
 <br><br><br>
