--- a/formationEnglish.html
+++ b/formationEnglish.html
@@ -18,25 +18,46 @@
   </script>
 </head>
 <body>
-
-<header>
-  <div class="left-section">
-    <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
-    <small>ADRIEN RAVEL</small>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="indexEnglish.html">HOME</a></li>
-      <li><a href="formationEnglish.html">EDUCATION</a></li>
-      <li><a href="experiencesEnglish.html">EXPERIENCES</a></li>
-      <li><a href="projectEnglish.html">PROJECTS</a></li>
-      <li><a href="skillsEnglish.html">SKILLS</a></li>
-    </ul>
-  </nav>
-  <a class="drapeau" href="formation.html" ><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
+<header class="a">
+    <nav class="navbar">
+        <div class="navbar-toggle" onclick="toggleMenu()">
+            <div class="icon-bar"></div>
+            <div class="icon-bar"></div>
+            <div class="icon-bar"></div>
+        </div>
+        <ul id="menu" class="navbar-links">
+          <li><a href="indexEnglish.html">HOME</a></li>
+          <li><a href="formationEnglish.html">EDUCATION</a></li>
+          <li><a href="experiencesEnglish.html">EXPERIENCES</a></li>
+          <li><a href="projectEnglish.html">PROJECTS</a></li>
+          <li><a href="skillsEnglish.html">SKILLS</a></li>
+        </ul>
+    </nav>
+     <div class="left-section">
+        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <small>ADRIEN RAVEL</small>
+    </div>
+    <a class="drapeau" href="formation.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
 </header>
+<header class="b">
+    <div class="left-section">
+        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <small>ADRIEN RAVEL</small>
+    </div>
+    <nav class="navbar">
+        <ul >
+            <li><a href="indexEnglish.html">HOME</a></li>
+            <li><a href="formationEnglish.html">EDUCATION</a></li>
+            <li><a href="experiencesEnglish.html">EXPERIENCES</a></li>
+            <li><a href="projectEnglish.html">PROJECTS</a></li>
+            <li><a href="skillsEnglish.html">SKILLS</a></li>
+        </ul>
+    </nav>
+    <a class="drapeau" href="formation.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
+</header>
+
 <main>
-  <section>
+  <section class="normal1">
     <div class="content">
       <h2 class= "title">Education</h2>
       <p class="annee"><strong>2019 - 2024:</strong> ECE Engineering School - Major in Embedded Systems</p>
@@ -59,7 +80,7 @@
     </div>
     <br>
   </section>
-  <section>
+  <section class="normal1">
     <div class="images">
       <img src="images/4.png" alt="Formation" class="Image1">
       <img src="images/5.png" alt="Formation" class="Image1">
@@ -81,9 +102,49 @@
 
     </div>
   </section>
-
+  <section class="normal2">
+    <div class="content">
+      <h2 class= "title">Education</h2>
+      <p class="annee"><strong>2019 - 2024:</strong> ECE Engineering School - Major in Embedded Systems</p>
+      <img src="images/2.png" alt="Formation" class="Image1">
+      <p class="paragraphe"><em>I followed the integrated preparatory program at ECE, which allowed me to acquire skills in the latest developments in the field of digital technology. Afterwards, I specialized in the M1 and M2 levels in the Embedded Systems major. My education combines theory with practice, placing particular emphasis on hands-on lab work and numerous projects.</em></p>
+      <p class="paragraphe"><em> <a href="pdf/livretPedagogiqueECE.pdf" target="_blank">ECE Pedagogic Book</a></em></p>
+      <br>
+      <p class="intitule"><strong>2022:</strong> Kyungpook  National University</p>
+      <img src="images/1.png" alt="Formation" class="Image1">
+      <p class="paragraphe"><em>I spent a semester studying abroad at Kyungpook National University (경북대학교) in South Korea. During my exchange, I took courses in electronics, specifically focusing on artificial intelligence, operating systems, network programming, signal processing, and systems. Additionally, I had the opportunity to learn the Korean language.</em></p>
+      <br>
+      <p class="intitule"><strong>2022:</strong> Handimanagement training by "Companieros"</p>
+      <p class="paragraphe"><em>Thanks to this training, I have also developed managerial skills, enabling me to supervise and coordinate teams in projects related to inclusion and accessibility. I have gained a strong ability to lead, communicate effectively, and make informed decisions. This combination of management and awareness skills allows me to take a holistic approach in promoting equal opportunities and creating an inclusive environment for all.</em></p>
+      <br>
+      <p class="intitule"><strong>2019:</strong> Baccalaureate in Science (with honors)</p>
+      <p class="paragraphe"><em>I obtained my scientific baccalaureate at high school, where I solidified my knowledge in the fields of science, mathematics, and physics, while also developing my rigor and analytical skills.</em></p>
+      <br>
+      <img src="images/3.png" alt="Formation" class="Image1">
+      <br><br><br>
+    </div>
+  </section>
+  <section class="normal2">
+    <div class="content">
+      <h2 class= "title">Licences and certifications</h2>
+      <p class="intitule"><strong>2023:</strong> TOEIC - ETS Global</p>
+      <p class="paragraphe"><em><strong>Score: 885/990 (Level B2).</strong> The TOEIC (Test of English for International Communication) - Listening and Reading Test is a globally recognized test that assesses proficiency in English listening and reading comprehension skills.</em></p>
+      <br>
+      <p class="intitule"><strong>2021:</strong> Business Game Cesim</p>
+      <p class="paragraphe"><em>The Cesim Business Game is an interactive business simulation that has helped me develop my management skills and prepare for my future career. Through this hands-on experience, I was able to apply my theoretical knowledge, work in teams, develop communication skills, and enhance my decision-making abilities while learning from my mistakes. This immersive training provided me with a realistic perspective on the challenges and responsibilities I will face as a future manager or engineer. </em></p>
+      <img src="images/4.png" alt="Formation" class="Image1">
+      <br>
+      <p class="intitule"><strong>2020:</strong> Projet Voltaire Certification </p>
+      <p class="paragraphe"><em>The Projet Voltaire certification has strengthened my spelling and written expression skills for effective professional communication. Through this training, I have improved my command of the French language, enhanced my writing skills, and gained official recognition for my spelling abilities. This certification is a significant asset for my academic and professional journey, setting me apart as a student/professional with strong language skills and excellent written proficiency.</em></p>
+      <br>
+      <p class="intitule" ><strong>2018:</strong> <em>PSE1 (Level 1 First Aid Competency Certificate)</em></p>
+      <p class="paragraphe"><em>The PSE1 (Premier Secours en Équipe de niveau 1) certification has allowed me to develop first aid skills, including CPR, handling injuries, and managing medical emergencies. This certification acknowledges my abilities as a first responder and enables me to intervene effectively in case of a medical emergency, thereby contributing to the safety and well-being of others.</em></p>
+      <img src="images/5.png" alt="Formation" class="Image1">
+    </div>
+  </section>
+  <br><br><br>
 </main>
-<br><br><br>
+
 <footer>
   <div class="footer-content">
     <ul>
