--- a/experiencesEnglish.html
+++ b/experiencesEnglish.html
@@ -18,25 +18,46 @@
   </script>
 </head>
 <body>
-<header >
-  <div class="left-section">
-    <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
-    <small>ADRIEN RAVEL</small>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="indexEnglish.html">HOME</a></li>
-      <li><a href="formationEnglish.html">EDUCATION</a></li>
-      <li><a href="experiencesEnglish.html">EXPERIENCES</a></li>
-      <li><a href="projectEnglish.html">PROJECTS</a></li>
-      <li><a href="skillsEnglish.html">SKILLS</a></li>
-    </ul>
-  </nav>
-  <a class="drapeau" href="experiences.html" ><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
+<header class="a">
+    <nav class="navbar">
+        <div class="navbar-toggle" onclick="toggleMenu()">
+            <div class="icon-bar"></div>
+            <div class="icon-bar"></div>
+            <div class="icon-bar"></div>
+        </div>
+        <ul id="menu" class="navbar-links">
+          <li><a href="indexEnglish.html">HOME</a></li>
+          <li><a href="formationEnglish.html">EDUCATION</a></li>
+          <li><a href="experiencesEnglish.html">EXPERIENCES</a></li>
+          <li><a href="projectEnglish.html">PROJECTS</a></li>
+          <li><a href="skillsEnglish.html">SKILLS</a></li>
+        </ul>
+    </nav>
+     <div class="left-section">
+        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <small>ADRIEN RAVEL</small>
+    </div>
+    <a class="drapeau" href="experiences.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
+</header>
+<header class="b">
+    <div class="left-section">
+        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <small>ADRIEN RAVEL</small>
+    </div>
+    <nav class="navbar">
+        <ul >
+            <li><a href="indexEnglish.html">HOME</a></li>
+            <li><a href="formationEnglish.html">EDUCATION</a></li>
+            <li><a href="experiencesEnglish.html">EXPERIENCES</a></li>
+            <li><a href="projectEnglish.html">PROJECTS</a></li>
+            <li><a href="skillsEnglish.html">SKILLS</a></li>
+        </ul>
+    </nav>
+    <a class="drapeau" href="experiences.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
 </header>
 <main class="experience">
   <h2 class= "title">Professional Experiences</h2>
-  <section>
+  <section class= "normal1">
     <div class="content">
       <h3 class= "title2">SOMFY</h3>
       <p class="annee"><strong>2023:</strong> Internship: Software Engineer</p>
@@ -52,7 +73,7 @@
     </div>
 
   </section>
-  <section>
+  <section class= "normal1">
     <div class="content">
       <h3 class= "title2">Gauthier Fils</h3>
       <p class="annee"><strong>2021:</strong> Internship: Organizational Analysis</p>
@@ -67,7 +88,7 @@
     </div>
 
   </section>
-  <section>
+  <section class= "normal1">
     <div class="content">
       <h3 class= "title2">OMERIN</h3>
       <p class="annee"><strong>2019:</strong> Summer Employment: Industrial Machine Drainage</p>
@@ -77,6 +98,59 @@
       <h3 class= "title2">TEMP AGENCY</h3>
       <p class="annee"><strong>2018:</strong> Experience in Temp Agency at the age of 17</p>
       <p class="paragraphe"><em>At the age of 17, I gained my first experience in the working world through employment at a temporary agency. I worked in various factories, typically with assignments lasting three days. This experience allowed me to quickly adapt to new environments, follow precise instructions, and collaborate effectively in a team. These short-term assignments provided me with an initial immersion into the professional world, strengthening my resilience and fueling my determination to continue my education to develop my skills and explore new opportunities.</em></p>
+    </div>
+  </section>
+
+    <section class= "normal2">
+    <div class="content">
+      <h3 class= "title2">SOMFY</h3>
+      <img src="images/6.png" alt="Formation" class="Image2">
+      <p class="annee"><strong>2023:</strong> Internship: Software Engineer</p>
+
+      <p class="paragraphe"><em>As a Software Engineer intern at SOMFY in Cluses for a period of five months, I had the responsibility of working independently on the development of a gateway software. My main objective was to simplify the analysis of motor returns after their usage. Leveraging my programming skills in Python, C, C++, and HTML, I sought out the most suitable and user-friendly solutions to create an efficient software. This experience allowed me to deepen my knowledge in software development, enhance my organizational skills, and strengthen my proficiency in programming languages.</em></p>
+      <br>
+    </div>
+    <div class="content">
+      <h3 class= "title2">THALES LAS FRANCE</h3>
+      <img src="images/7.png" alt="Formation" class="Image2">
+      <p class="annee"><strong>2022:</strong> Internship: Database Manipulation</p>
+
+      <p class="paragraphe"><em>
+        During my two-month internship at THALES LAS France in Rungis, Île-de-France, I had the opportunity to work on data entry tasks and actively contribute to the update of the project management plan. My main responsibilities revolved around entering metadata related to document deliveries into the company's database. Throughout this experience, I developed my skills in data analysis and gained a deeper understanding of the organization within a large corporation. I demonstrated my autonomy in completing assigned tasks and was able to enhance my professional capabilities. This internship provided me with valuable experience and strengthened my skill set in the field.</em></p>
+      <br>
+    </div>
+
+  </section>
+  <section class= "normal2">
+    <div class="content">
+      <h3 class= "title2">Gauthier Fils</h3>
+      <img src="images/8.png" alt="Formation" class="Image2">
+      <p class="annee"><strong>2021:</strong> Internship: Organizational Analysis</p>
+      <p class="paragraphe"><em>During my five-week internship at Gauthier Fils, I had the opportunity to delve into the company's operations and study key documents while simultaneously developing a tool to trace the entire organizational process, from client demands to product commercialization. This internship allowed me to enhance my skills in critical thinking, analysis, and apply my theoretical knowledge of business organization. It provided me with a deeper understanding of the overall functioning of a company and allowed me to apply my academic expertise in a real-world setting.</em></p>
+      <br>
+    </div>
+    <div class="content">
+      <img src="images/9.png" alt="Formation" class="Image2">
+      <h3 class= "title2">Trésorerie Publique</h3>
+      <p class="annee"><strong> 2020:</strong> Summer Employment: Confidential Document Archiving</p>
+      <p class="paragraphe"><em>During my one-month summer job at the Trésorerie Publique d'Ambert, I was responsible for sorting and organizing documents within the archives. This experience allowed me to develop meticulous management skills, organizational abilities, and a keen attention to detail. I demonstrated my capacity to work independently and take responsibility for executing assigned tasks. This position reinforced my discipline and strengthened my organizational skills. </em></p>
+      <br>
+    </div>
+
+  </section>
+  <section class= "normal2">
+    <div class="content">
+      <h3 class= "title2">OMERIN</h3>
+      <img src="images/10.png" alt="Formation" class="Image2">
+      <p class="annee"><strong>2019:</strong> Summer Employment: Industrial Machine Drainage</p>
+      <p class="paragraphe"><em>During my summer employment at Omerin, I worked in the maintenance department where I performed industrial machine drainage, specifically focusing on braiding machines. This experience provided me with a concrete understanding of the working world and instilled in me a strong motivation to pursue higher education. I developed discipline and precision by meticulously following maintenance procedures. Additionally, this experience taught me the significance of teamwork and collaboration. </em></p>
+    </div>
+    <div class="content">
+      <h3 class= "title2">TEMP AGENCY</h3>
+      <img src="images/11.png" alt="Formation" class="Image2">
+      <p class="annee"><strong>2018:</strong> Experience in Temp Agency at the age of 17</p>
+      <p class="paragraphe"><em>At the age of 17, I gained my first experience in the working world through employment at a temporary agency. I worked in various factories, typically with assignments lasting three days. This experience allowed me to quickly adapt to new environments, follow precise instructions, and collaborate effectively in a team. These short-term assignments provided me with an initial immersion into the professional world, strengthening my resilience and fueling my determination to continue my education to develop my skills and explore new opportunities.</em></p>
+      <br><br><br>
     </div>
   </section>
   <div class="images3">
