--- a/experiencesEnglish.html
+++ b/experiencesEnglish.html
@@ -34,7 +34,7 @@
         </ul>
     </nav>
      <div class="left-section">
-        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil">
         <small>ADRIEN RAVEL</small>
     </div>
     <a class="drapeau" href="experiences.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
@@ -55,6 +55,7 @@
     </nav>
     <a class="drapeau" href="experiences.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
 </header>
+
 <main class="experience">
   <h2 class= "title">Professional Experiences</h2>
   <section class= "normal1">
