--- a/formationEnglish.html
+++ b/formationEnglish.html
@@ -34,7 +34,7 @@
         </ul>
     </nav>
      <div class="left-section">
-        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil">
         <small>ADRIEN RAVEL</small>
     </div>
     <a class="drapeau" href="formation.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
