--- a/experiences.html
+++ b/experiences.html
@@ -36,7 +36,7 @@
         </ul>
     </nav>
      <div class="left-section">
-        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil">
         <small>ADRIEN RAVEL</small>
     </div>
     <a class="drapeau" href="experiencesEnglish.html"><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
