--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -35,7 +35,7 @@
         </ul>
     </nav>
      <div class="left-section">
-        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil">
         <small>ADRIEN RAVEL</small>
     </div>
     <a class="drapeau" href="pageAcceuil.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
