--- a/projets.html
+++ b/projets.html
@@ -18,27 +18,48 @@
     </script>
 </head>
 <body>
-<header>
-    <div class="left-section">
-        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
-        <small>ADRIEN RAVEL</small>
-    </div>
-    <nav>
-        <ul>
+<header class="a">
+    <nav class="navbar">
+        <div class="navbar-toggle" onclick="toggleMenu()">
+            <div class="icon-bar"></div>
+            <div class="icon-bar"></div>
+            <div class="icon-bar"></div>
+        </div>
+        <ul id="menu" class="navbar-links">
             <li><a href="pageAcceuil.html">ACCEUIL</a></li>
             <li><a href="formation.html">FORMATIONS</a></li>
             <li><a href="experiences.html">EXPERIENCES</a></li>
             <li><a href="projets.html">PROJETS</a></li>
-            <li><a href="skills.html">COMPETENCES</a></li
+            <li><a href="skills.html">COMPETENCES</a></li>
         </ul>
     </nav>
-    <a class="drapeau" href="projectEnglish.html" ><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
+     <div class="left-section">
+        <img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil">
+        <small>ADRIEN RAVEL</small>
+    </div>
+    <a class="drapeau" href="projectEnglish.html"><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
+</header>
+<header class="b">
+    <div class="left-section">
+        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <small>ADRIEN RAVEL</small>
+    </div>
+    <nav class="navbar">
+        <ul >
+            <li><a href="pageAcceuil.html">ACCEUIL</a></li>
+            <li><a href="formation.html">FORMATIONS</a></li>
+            <li><a href="experiences.html">EXPERIENCES</a></li>
+            <li><a href="projets.html">PROJETS</a></li>
+            <li><a href="skills.html">COMPETENCES</a></li>
+        </ul>
+    </nav>
+    <a class="drapeau" href="projectEnglish.html"><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
 </header>
 
 <main>
     <h2>Projets Académiques Longue Durée</h2>
     <br>
-    <section>
+    <section class="normal">
         <div class="content">
             <h3 class="title2">ARECE</h3>
             <p>En tant que <strong>Vice-Président Communication et Événement</strong> au sein de l'association automobile ARECE de juin 2021 à mai 2023, j'ai contribué activement au développement du logiciel d'un monoplace autonome pour participer à la compétition internationale Formula Student à Silverstone. J'ai coordonné les activités de communication de l'association et organisé des événements clés liés à notre projet. Cette expérience m'a permis de développer mes compétences en gestion de projet, en communication stratégique et en organisation d'événements, tout en acquérant une expertise technique dans le domaine des véhicules autonomes.</p>
@@ -48,19 +69,31 @@
             <img class="areceIMG" src="./images/arece.PNG"  alt="Projets">
         </div>
     </section>
+
     <br><br>
-    <section>
+
+    <section class="normal1">
         <div class="images">
-        <img src="/images/reulock.jpg" alt="Projets">
+            <img src="/images/reulock.jpg" alt="Projets">
         </div>
         <div class="content">
             <h3 class="title2">REULOCK</h3>
             <p>En tant que <strong>chef de projet</strong>, j'ai dirigé une équipe dans la conception d'une solution de fermeture électronique innovante pour les colis réutilisables de l'entreprise Réutec. Notre solution, qui fonctionne avec une alimentation secteur 12V et un embout universel, élimine le besoin d'une batterie intégrée. L'utilisateur scanne simplement le QR-CODE, obtient son code sur la plateforme, branche le colis sur secteur et entre le code pour ouvrir le colis. J'ai acquis des compétences techniques précieuses telles que la <strong>programmation de microcontrôleurs</strong>, la <strong>conception assistée par ordinateur</strong> (CAO) et <strong>la réalisation de circuits électroniques</strong>. J'ai également développé des compétences en <strong>gestion de projet</strong>, <strong>organisation</strong>, <strong>la collaboration en équipe</strong> et <strong>la gestion du temps</strong>.</p>
         </div>
-
     </section>
+    <section class="normal2">
+        <h3 class="title2">REULOCK</h3>
+        <div class="content">
+            <p>En tant que <strong>chef de projet</strong>, j'ai dirigé une équipe dans la conception d'une solution de fermeture électronique innovante pour les colis réutilisables de l'entreprise Réutec. Notre solution, qui fonctionne avec une alimentation secteur 12V et un embout universel, élimine le besoin d'une batterie intégrée. L'utilisateur scanne simplement le QR-CODE, obtient son code sur la plateforme, branche le colis sur secteur et entre le code pour ouvrir le colis. J'ai acquis des compétences techniques précieuses telles que la <strong>programmation de microcontrôleurs</strong>, la <strong>conception assistée par ordinateur</strong> (CAO) et <strong>la réalisation de circuits électroniques</strong>. J'ai également développé des compétences en <strong>gestion de projet</strong>, <strong>organisation</strong>, <strong>la collaboration en équipe</strong> et <strong>la gestion du temps</strong>.</p>
+        </div>
+        <div class="images">
+            <img src="/images/reulock.jpg" alt="Projets">
+        </div>
+    </section>
+
     <br><br>
-    <section>
+
+    <section class="normal">
         <div class="content">
             <h3 class="title2">ARES</h3>
             <p>J'ai principalement travaillé sur la partie <strong>Intelligence Artificielle</strong> du projet au seins de mon équipe de 7 personnes. Notre objectif était de créer un robot capable de prendre et déplacer des cubes vers des emplacements spécifiques. J'ai été responsable de l'implémentation de l'algorithme A* pour le déplacement du robot. En utilisant cet algorithme, j'ai développé une stratégie efficace pour que le robot, planifie ses mouvements afin d'optimiser la collecte des cubes dans le concours organisé en fin d'année. En plus de cela, j'ai également contribué à d'autres aspects du projet tels que <strong>le montage du robot</strong>, <strong> modélisation de certaines pièces</strong>, <strong>la lecture d'images reçues</strong>, er <strong>la communication avec le serveur </strong>.</p>
@@ -69,8 +102,10 @@
             <img src="./images/ares.jpg" alt="Projets">
         </div>
     </section>
+
     <br><br>
-    <section>
+
+    <section class="normal1">
         <div class="images">
             <a><img class="wulliIMG" src="./images/wulli.png" alt="Projets"></a>
         </div>
@@ -78,6 +113,16 @@
             <h3 class="title2">WULLI</h3>
             <p>
                 En première année à l'ECE, j'ai travaillé en équipe sur un projet axé sur les enjeux de demain. Nous avons choisi de nous concentrer sur la problématique du suremballage et avons développé la solution WULLI. C'est une application novatrice visant à mesurer le taux de suremballage d'un produit. En utilisant la fonction de scan, l'application attribue un score de suremballage au produit analysé. J'ai contribué activement à toutes les phases du projet, de la conception à la réalisation. Cette expérience m'a permis de développer mes compétences en gestion de projet, en travail d'équipe et en développement d'applications répondant aux besoins sociétaux actuels.</p>
+        </div>
+    </section>
+    <section class="normal2">
+        <div class="content">
+            <h3 class="title2">WULLI</h3>
+            <p>
+                En première année à l'ECE, j'ai travaillé en équipe sur un projet axé sur les enjeux de demain. Nous avons choisi de nous concentrer sur la problématique du suremballage et avons développé la solution WULLI. C'est une application novatrice visant à mesurer le taux de suremballage d'un produit. En utilisant la fonction de scan, l'application attribue un score de suremballage au produit analysé. J'ai contribué activement à toutes les phases du projet, de la conception à la réalisation. Cette expérience m'a permis de développer mes compétences en gestion de projet, en travail d'équipe et en développement d'applications répondant aux besoins sociétaux actuels.</p>
+        </div>
+        <div class="images">
+            <a><img class="wulliIMG" src="./images/wulli.png" alt="Projets"></a>
         </div>
     </section>
 
